# SLAC

./: Makefile  README.md  docker-compose.yml
backend/: Dockerfile  package.json  pyproject.toml  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 20251026_0001_init.py
backend/app/: config.py  db.py  deps.py  logging.py  main.py  metrics.py  models.py  rate_limit.py  repositories.py  schemas.py  services.py  websocket.py
backend/app/routers/: health.py  trips.py
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/routes/: trips.ts
collector/: Dockerfile  package.json  pyproject.toml
collector/slac_collector/: config.py  dedupe.py  irail_client.py  logging.py  main.py  scheduler.py
collector/src/: index.js
frontend/: .env  .env.production  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Badge.tsx  DelayBadge.tsx  EmptyState.tsx  ErrorState.tsx  FiltersBar.tsx  Header.tsx  Loading.tsx  RealtimeBadge.tsx  Skeleton.tsx  StatusPill.tsx  TripCard.tsx  TripDetailsDrawer.tsx  TripList.tsx
frontend/src/pages/: Home.tsx
frontend/src/store/: useTrips.ts
infra/: prometheus.yml
